# pr_1

./: homework3.ipynb  pr_wb_1.ipynb  pyproject.toml
.ipynb_checkpoints/: firs_HW-checkpoint.ipynb  homework2-checkpoint.ipynb
tests/: .ipynb_checkpoints - Ярлык.lnk
