[tool.poetry]
name = "python-section"
version = "0.1.0"
description = ""
authors = ["Ivaschenko Nikita <ivashchenkonikal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
jupyter = "^1.0.0"
lab = "^7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
